Update version to 0.0.3

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 body {
-    padding: 20px;
-    background-color:#ffffc9
+  padding: 20px;
+  background-color:#ffffc9
 }
       
-p { margin : 0; }
+p {
+  margin : 0;
+}
