Update version to '0.1.0'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@ C# output:
 <br>
 <textarea rows="10" cols="30">{{output}}</textarea>
 <br>
-<button type="button" (click)="callDotnetMethod()" [disabled]="disabled">Dotnet method</button>
+<button type="button" (click)="incrementCounter()" [disabled]="disabled">Increment counter</button>
+<button type="button" (click)="getNewGuid()" [disabled]="disabled">Get new GUID</button>
 <br>
 
